--- a/package.json
+++ b/package.json
@@ -7,11 +7,27 @@
     "type": "git",
     "url": "git+https://github.com/lukejacksonn/Actuate.git"
   },
-  "keywords": ["css", "animate", "animation", "sequencing", "promise"],
+  "keywords": [
+    "css",
+    "animate",
+    "animation",
+    "sequencing",
+    "promise"
+  ],
   "author": "Luke Jackson <lukejacksonn@gmail.com>",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/lukejacksonn/Actuate/issues"
   },
-  "homepage": "https://github.com/lukejacksonn/Actuate#readme"
+  "homepage": "https://github.com/lukejacksonn/Actuate#readme",
+  "scripts": {
+    "build": "babel index.js > index.min.js"
+  },
+  "babel": {
+    "presets": ["env"]
+  },
+  "devDependencies": {
+    "babel-cli": "^6.24.0",
+    "babel-preset-env": "^1.3.2"
+  }
 }
