--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "actuatejs",
   "version": "1.0.0",
   "description": "One line easy actuation of CSS animation sequences.",
-  "main": "index.js",
+  "main": "index.min.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/lukejacksonn/Actuate.git"
@@ -21,13 +21,18 @@
   },
   "homepage": "https://github.com/lukejacksonn/Actuate#readme",
   "scripts": {
-    "build": "babel index.js > index.min.js"
+    "build": "babel index.js > index.min.js",
+    "minify": "uglifyjs -c -m -o index.min.js -- index.min.js",
+    "prepublish": "npm run build && npm run minify"
   },
   "babel": {
-    "presets": ["env"]
+    "presets": [
+      "env"
+    ]
   },
   "devDependencies": {
     "babel-cli": "^6.24.0",
-    "babel-preset-env": "^1.3.2"
+    "babel-preset-env": "^1.3.2",
+    "uglify-js": "^2.8.21"
   }
 }
